tests/error/types-8.moc
int main() {
    char* p;
    int* p2 = p;
}
